# ex_arrow

./: .credo.exs  .formatter.exs  .gitignore  .sobelow-skips  ANNOUNCEMENT_0_2_0.md  ANNOUNCEMENT_0_3_0.md  CHANGELOG.md  MILESTONE_00.md  MILESTONE_01.md  PROMPT.md  README.md  RELEASE_NOTES_0_2_0.md  RELEASE_NOTES_0_3_0.md  RELEASE_NOTES_0_5_0.md  checksum-Elixir.ExArrow.Native.exs  coveralls.json  mix.exs
.github/workflows/: benchmarks.yml  ci.yml  integration.yml  precompiled_nifs.yml  test_gh_pages_write.yml
bench/: adbc_bench.exs  bench_helper.exs  explorer_arrow_bench.exs  flight_bench.exs  ipc_read_bench.exs  ipc_write_bench.exs  nx_arrow_bench.exs  pipeline_bench.exs  run_all.exs  v070_record_batch_vs_maps_bench.exs  v070_stream_flow_pipeline_bench.exs
config/: config.exs
dev/bench/: data.js
docs/: RELEASE_NOTES_0.1.0.md  adbc_guide.md  benchmarks.md  cdi_guide.md  compute_guide.md  flight_guide.md  flight_sql_guide.md  ipc_guide.md  memory_model.md  nx_guide.md  overview.md  parquet_guide.md  release_announcement.md  release_checklist.md
examples/: adbc_query.exs  ipc_roundtrip.exs
examples/flight_echo/: client.exs  server.exs
guides/: 01_arrow_for_elixir_developers.md  02_explorer_integration.md  03_nx_integration.md  04_arrow_ecosystem.md  05_arrow_pipelines_overview.md  06_arrow_streams.md  07_arrow_and_flow.md  08_arrow_and_genstage.md  09_arrow_and_broadway.md  10_arrow_pipeline_patterns.md
lib/: ex_arrow.ex
lib/ex_arrow/: application.ex  array.ex  batch.ex  broadway.ex  cdi.ex  compute.ex  data_frame.ex  error.ex  explorer.ex  field.ex  flight_sql.ex  flow.ex  gen_stage.ex  native.ex  nimble_pool_behaviour.ex  nx.ex  pipeline.ex  record_batch.ex  schema.ex  sink.ex  stream.ex  table.ex  telemetry.ex
lib/ex_arrow/adbc/: NOTES.md  adbc_package_manager.ex  adbc_package_pool.ex  (+14 more)
livebook/: 00_quickstart.livemd  01_ipc.livemd  02_flight.livemd  03_adbc.livemd  04_adbc_integration.exs  04_adbc_integration.livemd  INSTALL_ADBC_DRIVER.md  README.md
native/ex_arrow_native/: Cargo.toml  Cross.toml
native/ex_arrow_native/.cargo/: config.toml
native/ex_arrow_native/src/: adbc.rs  cdi.rs  compute.rs  flight.rs  flight_sql.rs  ipc.rs  lib.rs  parquet.rs  resources.rs  util.rs
script/: check_version  ci
test/: ex_arrow_test.exs  test_helper.exs
test/ex_arrow/: adbc_integration_test.exs  adbc_package_test.exs  adbc_test.exs  array_test.exs  batch_property_test.exs  batch_test.exs  broadway_test.exs  cdi_test.exs  compute_test.exs  connection_pool_test.exs  data_frame_test.exs  database_server_test.exs  error_test.exs  explorer_property_test.exs  explorer_roundtrip_test.exs  explorer_test.exs  field_test.exs  flight_action_type_test.exs  flight_client_impl_test.exs  flight_client_test.exs  flight_flight_info_test.exs  flight_integration_test.exs  flight_server_test.exs  flight_sql_client_impl_test.exs  flight_sql_client_test.exs  flight_sql_error_test.exs  flight_sql_integration_test.exs  flight_sql_metadata_test.exs  flight_sql_options_test.exs  flight_sql_result_test.exs  flight_sql_statement_test.exs  flow_test.exs  gen_stage_test.exs  ipc_file_test.exs  ipc_reader_writer_test.exs  native_test.exs  nx_property_test.exs  nx_roundtrip_test.exs  nx_test.exs  parquet_test.exs  (+7 more)
test/fixtures/: README.md
test/support/: adbc_download_stub.ex  adbc_manager_stubs.ex  adbc_test_native.ex  ci_stub.sh  ci_stub_fail.sh  flight_sql_native_stubs.ex  flight_sql_statement_stubs.ex  stream_native_stubs.ex  test_fixtures.ex
(+23 files in other folders)
