[package]
name = "ex_arrow_native"
version = "0.1.0"
edition = "2021"
description = "Apache Arrow NIFs for ExArrow Elixir library"
license = "Apache-2.0"

[lib]
name = "ex_arrow_native"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
rustler = { version = "0.32", default-features = false, features = ["derive"] }
arrow = { version = "56", default-features = false, features = ["ipc"] }
arrow-ipc = "56"
arrow-schema = { version = "56", default-features = false }
arrow-array = { version = "56", default-features = false }
arrow-flight = "56"
futures = "0.3"
tokio = { version = "1", features = ["rt-multi-thread", "net", "sync", "time", "macros"] }
tokio-stream = "0.1"
tonic = { version = "0.13", features = ["tls-ring", "tls-native-roots"] }
bytes = "1"
adbc_driver_manager = "0.22"
adbc_core = "0.22"

[features]
default = ["nif_version_2_16"]
nif_version_2_15 = ["rustler/nif_version_2_15"]
nif_version_2_16 = ["rustler/nif_version_2_16"]

[profile.release]
lto = true
strip = true
